# Walmart-Weekly-Sales

./: .env  .gitignore  mlflow.db  pyproject.toml
data/: .gitignore  Walmart_final.csv  inference.csv  predictions.csv  test.csv  walmart_ml_data.csv.dvc
docs/: logging.md
mlruns/1/models/m-808b1ce987964ad4b92e7d741f83fd13/artifacts/: MLmodel  conda.yaml  model.pkl
models/: lgb_best_model.pkl  model_trained.pkl
notebooks/: baseline+detrend_prev.ipynb  baseline.ipynb  data_explore.ipynb  feature_engineering.ipynb  model_training.ipynb
runs/: optuna_lgb_study.pkl
scripts/: full_data_pipeline.py  full_inference.py  full_train_pipeline.py
src/api/: main.py  schemas.py
src/api/routes/: predict.py  train.py
src/forecasting/logger/: logging.py
src/forecasting/models/: lgb_best_model.pkl
src/forecasting/pipelines/: data_pipeline.py  inference.py  train_pipeline.py
src/forecasting/stages/: base.py  ingestion.py  modelling.py  validation.py
src/forecasting/utils/: eval.py  save_data.py
tests/: test_ingestion.py  test_logger.py
