[project]
name = "walmart-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.65.0",
    "ipykernel>=7.1.0",
    "kaggle>=1.8.3",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
]
